# photo-hub

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  run_server.py
docs/: make.bat
docs/source/: conf.py  index.rst  modules.rst
src/opencode_testing/: __init__.py  cli.py  main.py
src/photo_hub/: __init__.py  cli.py
src/photo_hub/photo_search/: __init__.py  base.py  config.py  factory.py  gemini_client_new.py  metadata_store.py  models.py  qwen_client.py  scanner.py
src/photo_hub/web/: __init__.py  __main__.py  api.py  config.py
src/photo_hub/web/static/: index.html
src/photo_hub/web/static/css/: style.css
src/photo_hub/web/static/i18n/: en.json  zh.json
src/photo_hub/web/static/js/: app.js  i18n.js
tests/: test_basic.py  test_cli.py  test_photo_search.py
